parsear JSON a modelo (pojo) de forma tradicional

--- a/android_dev_ni_sample/res/values/strings.xml
+++ b/android_dev_ni_sample/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">volley_hello_world</string>
+    <string name="app_name">Devs Android Ni</string>
+    <string name="load">CARGAR</string>
+    <string name="loading">CARGANDO</string>
 </resources>
